--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Upload to S3
-    - uses: actions/checkout@master
-    - uses: jakejarvis/s3-sync-action@master
+    - name: checkout
+      uses: actions/checkout@master
+    - name: synch s3
+      uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git/*'
       env:
@@ -25,7 +26,7 @@ jobs:
       uses: chetan/invalidate-cloudfront-action@v2
       env:
         DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
-        PATHS: "/"
+        PATHS: "/*"
         AWS_REGION: "us-east-1"
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
