--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Invalidate CloudFront Cache
       uses: chetan/invalidate-cloudfront-action@v2
       env:
-        DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
+        DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION }}
         PATHS: "/*"
         AWS_REGION: "us-east-1"
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
